Upgrade to jdk21